# mero

./: .gitmodules  .travis.yml  CMakeLists.txt
docs/: Doxyfile
docs/latex/: refman.tex
include/: gui.h
spike/: CMakeLists.txt  df.cpp
src/: CMakeLists.txt  gui.cpp  mem_mgr.cpp  mem_mgr.h
tests/: CMakeLists.txt  test-mem_mgr.cpp  tests-main.cpp
